made so ship turns invisible when it touches the coconuts or teh fire and fixing bug of game instatnly ending

--- a/index.css
+++ b/index.css
@@ -209,3 +209,6 @@ z-index: 13;
 color: white;
 font-family: sans-serif;
 }
+.hidden {
+  display: none;
+}
